--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
        <h2 class="centered_title">
               
 Jogo de jantar<br> 
-panela de pressão<br>
+Panela de pressão<br>
 Jogo de banheiro<br>
 Lençol<br>
 Jogo sobre mesa<br>
 Jogo tolha de banho<br>
 Fruteiras<br>
-Bobeira de bolo<br>
+Bobeira para bolo<br>
 Liquidificador <br>
 Sanduicheira<br>
 Jogo de cozinha<br>
     </h2><br>
-     <center><a href="https://api.whatsapp.com/send?phone=557799479081&amp;text=Sim%20eu%20Vou" class="post_read_more">CLIQUE AQUI PARA ENVIAR O PRESENTE ESCOLHIDO</a></center>
+     <center><a href="https://api.whatsapp.com/send?phone=557799479081&amp;text=O%20Presente%20è:" class="post_read_more">CLIQUE AQUI PARA ENVIAR O PRESENTE ESCOLHIDO</a></center>
    
 
        
